--- a/config.yaml
+++ b/config.yaml
@@ -15,25 +15,36 @@ settings:
   dayInHistogramNotOperational: ' incident(s)' # xx incident(s) recorded
 
 monitors:
-  - id: workers-cloudflare-com # unique identifier
-    name: workers.cloudflare.com
-    description: 'You write code. They handle the rest.' # default=empty
-    url: 'https://workers.cloudflare.com/' # URL to fetch
+  - id: mail-code-tech-us-uk # unique identifier
+    name: Tmp Email
+    description: 'Tmp Email for Personal' # default=empty
+    url: 'https://mail.code-tech.us.uk' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
     followRedirect: false # should fetch follow redirects, default=false
     linkable: false # allows the title to be a link, default=true
 
-  - id: www-cloudflare-com
-    name: www.cloudflare.com
-    description: 'Built for anything connected to the Internet.'
-    url: 'https://www.cloudflare.com'
+  - id: banner-c0despace-uk
+    name: banner.c0despace.uk
+    description: 'Banner for personal'
+    url: 'https://banner.c0despace.uk'
     method: GET
     expectStatus: 200
-    linkable: true # allows the title to be a link, default=true
+    linkable: false # allows the title to be a link, default=true
+    followRedirect: false # should fetch follow redirects, default=false
 
-  - id: blog-cloudflare-com
-    name: The Cloudflare Blog
-    url: 'https://blog.cloudflare.com/'
+  - id: github-blog
+    name: Github BLog
+    url: 'https://zywj0han9.github.io'
     method: GET
     expectStatus: 200
+    linkable: false # allows the title to be a link, default=true
+    followRedirect: false # should fetch follow redirects, default=false
+
+  - id: CF-blog
+    name: Cloudflare BLog
+    url: 'https://blog.zywj0han9.win'
+    method: GET
+    expectStatus: 200
+    linkable: false # allows the title to be a link, default=true
+    followRedirect: false # should fetch follow redirects, default=false
