--- a/wrangler.toml
+++ b/wrangler.toml
@@ -12,6 +12,8 @@ crons = ["* * * * *"]
 bucket = "out"
 entry-point = "./"
 
+[placement]
+mode = "smart"
 # uncomment and adjust following if you are not using GitHub Actions
 #[env.production]
 #kv-namespaces = [{binding="KV_STATUS_PAGE", id="xxxx", preview_id=""}]
