--- a/wrangler.toml
+++ b/wrangler.toml
@@ -6,7 +6,7 @@ webpack_config = "node_modules/flareact/webpack"
 compatibility_date = "2021-07-23"
 
 [triggers]
-crons = ["CRONS"]
+crons = ["* * * *"]
 
 [site]
 bucket = "out"
