--- a/config.yaml
+++ b/config.yaml
@@ -16,14 +16,15 @@ settings:
   dayInHistogramNotOperational: 'Some checks failed'
   
 monitors:
+
   - id: Tmpmail-code-tech # unique identifier
     name: 临时邮箱
     description: '临时邮箱' # default=empty
     url: 'https://mail.code-tech.us.kg/' # URL to fetch
     method: GET # default=GET
     expectStatus: 200 # operational status, default=200
-    followRedirect: true # should fetch follow redirects, default=false
-    linkable: false # allows the title to be a link, default=true
+    linkable: true # allows the title to be a link, default=true
+    followRedirect: false # should fetch follow redirects, default=false
 
   - id: Banner-c0despace
     name: 导航页
